[package]
name = "abc"
version = "0.1.0"
description = "abc"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abc"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
solana-program = "1.9.4"
num = "0.4.0"
